--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -240,7 +240,7 @@
                             <!-- -->
                             <div class="form_green_button">Завершить оформление</div>
                             <div class="form_grey_button">Назад</div>
-							<div class="attention">Пожалуйста, удостоверьтесь, что Вы правильно заполнили все поля формы, это важно для опеспечения гарантии выплаты страхового возмещения.</div>
+							<div class="attention">Пожалуйста, удостоверьтесь, что Вы правильно заполнили все поля формы, это важно для обеспечения гарантии выплаты страхового возмещения.</div>
                             <div style="clear: both;"></div>
                         </div>
 
@@ -396,14 +396,12 @@
 	yearRange: "1945:-17",
 	changeMonth: true,
     changeYear: true,
-	hideIfNoPrevNext: true,
     });
 	$('#documentDate').datepicker({
     dateFormat: 'dd.mm.yy',
 	yearRange: "1960:-1",
 	changeMonth: true,
     changeYear: true,
-	hideIfNoPrevNext: true,
     });
     {#/*function selectCity() {
         var inputEl = $(this).parents('ul').attr('form-input-id');
