--- a/path/src/Insurance/ContentBundle/Resources/views/Default/payRedirect.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/payRedirect.html.twig
@@ -1,5 +1,9 @@
 {%block title %}Идет перенаправление на платежную систему{% endblock %}
-{% extends 'InsuranceContentBundle::base.html.twig'%}
+{%block head_scripts%}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<link href="{{asset('bundles/insurancecontent/css/style.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{asset('bundles/insurancecontent/css/fixes.css')}}" rel="stylesheet" type="text/css" />
+{% endblock %}
 {% block content %}
     <section class="content">
         <div class="limit text_content center">
