--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -238,7 +238,7 @@
                                 </div>
                             </div>
                             <!-- -->
-                            <div class="form_green_button">Завершить оформление</div>
+                            <div class="form_green_button">Да, все верно</div>
                             <div class="form_grey_button">Назад</div>
 							<div class="attention">Пожалуйста, удостоверьтесь, что Вы правильно заполнили все поля формы, это важно для обеспечения гарантии выплаты страхового возмещения.</div>
                             <div style="clear: both;"></div>
