--- a/path/src/Insurance/ContentBundle/Resources/views/Form/callback_form.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Form/callback_form.html.twig
@@ -16,7 +16,7 @@
             <div class="error ico"></div>
             <div class="error_text">Нужно заполнить</div>
         </div>
-        <div class="control_point">
+       <!-- <div class="control_point">
             {{form_row(callback_form.email)}}
             <div class="success ico"></div>
             <div class="error ico"></div>
@@ -31,7 +31,7 @@
         <div class="control_point">
             <label>Комментарий:</label>
             {{form_widget(callback_form.question)}}
-        </div>
+        </div>-->
         <div type="submit" class="green_button">Жду звонка</div>
 		<div class="modal_preloader">
         <img src="{{asset('bundles/insurancecontent/images/3.gif')}}" alt="img" />
