--- a/path/src/Insurance/ContentBundle/Resources/public/css/style.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/style.css
@@ -1857,8 +1857,7 @@ form.modal_form {
   color: black;
   line-height: 14px;
   font-weight: 400;
-  display: none; 
-  text-align: justify;}
+  display: none; }
   .pop_up .popup_title {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
