--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -166,14 +166,14 @@
                                     <div id="privat24" class="ico privat24"></div>
                                     <div class="text"><b>Приват 24</b></div>
                                 </div>
-                                <!-- <div class="payment_point{% if app.session.get('payType') == 'terminal' %} current{%endif%}">
+                                <div class="payment_point{% if app.session.get('payType') == 'terminal' %} current{%endif%}">
                                     <div id="terminal" class="ico terminal"></div>
                                     <div class="text"><b>Терминалы</b> оплаты</div>
                                 </div>
                                 <div class="payment_point{% if app.session.get('payType') == 'webmoney'%} current{%endif%}">
                                     <div id="webmoney" class="ico webmoney"></div>
                                     <div class="text"><b>Webmoney</b></div>
-                                </div> -->
+                                </div>
                                 <div style="clear: both;"></div>
                             </div>
                             <input type="hidden" id="payType" name="payType" value="{% if app.session.get('payType') is null %}cash{% else %}{{app.session.get('payType')}}{% endif %}"/>
