--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -117,14 +117,14 @@ jQuery(function(){
 
                     <!-- econom -->
                     <div class="econom_box">
-                        <div class="text">Мы уже сэкономили нашим клиентам в 2013 году:</div>
-                        <span>{{savedSum[:1]}}</span>
-                        <span>{{savedSum[1:1]}}</span>
-                        <span>{{savedSum[2:1]}}</span>
+                        <div class="text">Мы помогли сэкономить нашим клиентам в 2013 году:</div>
+                        <span><!--{{savedSum[:1]}}-->1</span>
+                        <span><!--{{savedSum[1:1]}}-->8</span>
+                        <span><!--{{savedSum[2:1]}}-->2</span>
                         <span class="delim"></span>
-                        <span>{{savedSum[3:1]}}</span>
-                        <span>{{savedSum[4:1]}}</span>
-                        <span>{{savedSum[5:1]}}</span>
+                        <span><!--{{savedSum[3:1]}}-->8</span>
+                        <span><!--{{savedSum[4:1]}}-->4</span>
+                        <span><!--{{savedSum[5:1]}}-->8</span>
                         <div class="text">грн.</div>
                         <div style="clear: both;"></div>
                         <div class="shadow"></div>
