google map added

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
@@ -22,7 +22,7 @@
 					</div>
 					</div>
 					<div class="contact_right">
-						<script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=cBc1e8QnXZx7_J8h3Qh0evPDQ68epIAE&width=450&height=240"></script>
+						<iframe width="450" height="240" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.ua/maps/ms?msa=0&amp;msid=205037517457610744096.0004ef74db488f729517e&amp;hl=ru&amp;ie=UTF8&amp;t=m&amp;ll=50.507518,30.608082&amp;spn=0.003275,0.009656&amp;z=16&amp;output=embed"></iframe>
 					</div>
         </div>
 					 <div class="footer-push"></div>
