--- a/path/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,6 +1,6 @@
 <div class="modal" id="login_modal">
     <div class="close"></div>
-    <div class="title">Войти в офис</div>
+    <div class="title">Авторизация</div>
     <!--<div class="social">
         <a href="" class="vk">Войти через VK</a>
         <a href="" class="fb">Войти через FB</a>
