reg disable fields

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -421,7 +421,8 @@ $(function() {
                                         <div class="question_ico">
                                           <div class="pop_up">
                                             <div class="popup_title">Личная безопастность</div>
-                                            Вы можете застраховать собственную жизнь и здоровье, а также жизнь и здоровье Ваших пассажиров от несчастных случаев в результате ДТП.
+                                            Страхование водителя и пассажиров от несчастных случаев в результате ДТП.<br/>
+											Для этого выберите количество пассажиров и страховую сумму для каждого.
                                           </div>
                                         </div>
                                     </label>
