--- a/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -9,13 +9,13 @@
         <a href="" class="fb">Регистрация через FB</a>
     </div>-->
     <form class="fos_user_registration_register modal_form" action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" >
-        <div class="control_point{% if form.firstname.vars.errors|length > 0%} error{% endif %}">
+        <!-- <div class="control_point{% if form.firstname.vars.errors|length > 0%} error{% endif %}">
             {{ form_label(form.firstname) }}
             {{ form_widget(form.firstname, { 'attr': { 'placeholder': "Введите Ваше имя"} }) }}
             <div class="success ico"></div>
             <div class="error ico"></div>
             <div class="error_text">{{- form_errors(form.firstname)|trim(', ') -}}</div>
-        </div>
+        </div> -->
         <div class="control_point{% if form.email.vars.errors|length > 0%} error{% endif %}">
             {{ form_label(form.email) }}
             {{ form_widget(form.email, { 'attr': { 'placeholder': "Введите e-mail адрес"} }) }}
@@ -69,15 +69,15 @@ $('.green_button.register').on('click', function(){
         $(form).find('#fos_user_registration_form_email').parents('.control_point').removeClass('error');
     }
 
-    if ($(form).find('#fos_user_registration_form_firstname').val().length == 0) {
-        $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('error');
-        $(form).find('#fos_user_registration_form_firstname').parents('.control_point').removeClass('success');
-        $(form).find('#fos_user_registration_form_firstname').nextAll('.error_text').text('Введите имя');
-        errors.fos_user_registration_form_firstname = true;
-    } else {
-        $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('success');
-        $(form).find('#fos_user_registration_form_firstname').parents('.control_point').removeClass('error');
-    }
+    //if ($(form).find('#fos_user_registration_form_firstname').val().length == 0) {
+    //    $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('error');
+    //    $(form).find('#fos_user_registration_form_firstname').parents('.control_point').removeClass('success');
+    //    $(form).find('#fos_user_registration_form_firstname').nextAll('.error_text').text('Введите имя');
+    //    errors.fos_user_registration_form_firstname = true;
+    //} else {
+    //    $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('success');
+    //    $(form).find('#fos_user_registration_form_firstname').parents('.control_point').removeClass('error');
+    //}
 
     if ($(form).find('#fos_user_registration_form_plainPassword_first').val().length == 0) {
         $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('error');
@@ -103,14 +103,14 @@ $('.green_button.register').on('click', function(){
         $(form).find('#fos_user_registration_form_plainPassword_second').parents('.control_point').removeClass('error');
     }
 
-    if (!$(form).find('#accept').is(':checked')) {
-        $(form).find('#accept').parents('.control_point').addClass('error');
-        $(form).find('#accept').parents('.control_point').removeClass('success');
-        errors.accept = true;
-    } else {
-        $(form).find('#accept').parents('.control_point').addClass('success');
-        $(form).find('#accept').parents('.control_point').removeClass('error');
-    }
+    //if (!$(form).find('#accept').is(':checked')) {
+    //    $(form).find('#accept').parents('.control_point').addClass('error');
+    //    $(form).find('#accept').parents('.control_point').removeClass('success');
+    //    errors.accept = true;
+    //} else {
+    //    $(form).find('#accept').parents('.control_point').addClass('success');
+    //    $(form).find('#accept').parents('.control_point').removeClass('error');
+    //}
     for (v in errors) {
         errorsPresent = true;
     }
