--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -44,7 +44,7 @@
                             <div class="label">Полис начнет действовать:</div>
                             <div class="date"><input type="text" value="{% if app.session.get('activeFrom') %}{% else %}{{ '+2 days'|date('d.m.Y') }}{% endif %}" name="activeFrom" id="activeFrom"/><span></span></div>
 							<div class="pop_up_date">
-                                    <b>Начиная с послезавтра. Если Вам нужно, чтобы полис начал действовать раньше, пожалуйста позвоните нам для согласования.</b>
+                                    <b>Начиная с послезавтра.</b> Если Вам нужно, чтобы полис начал действовать раньше, пожалуйста позвоните нам для согласования.
                                 </div>
 
                         </div>
