--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -139,12 +139,12 @@ jQuery(function(){
                         </div>
                         <div class="step_point">
                             <div class="img second"></div>
-                            <h3 class="text">Расчитайте стоимость полиса со скидкой</h3>
+                            <h3 class="text">Рассчитайте стоимость полиса со скидкой</h3>
                             <div class="arrow"></div>
                         </div>
                         <div class="step_point">
                             <div class="img third"></div>
-                            <h3 class="text">Введите персональные данные</h3>
+                            <h3 class="text">Введите<br />данные о себе<br />и автомобиле</h3>
                             <div class="arrow"></div>
                         </div>
                         <div class="step_point last">
