--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -173,7 +173,7 @@ jQuery(function(){
                         <div class="adv_point">
                             <div class="ico dollar"></div>
                             <h3 class="title">Честная цена</h3>
-                            <p class="text">Наш сервис показывает только реальную стоимость полиса, без всяких обманов и уловок.</p>
+                            <p class="text">Наш сервис показывает только реальную стоимость полиса, без всяких обманов и уловок</p>
                         </div>
                         <div class="adv_point">
                             <div class="ico smile"></div>
@@ -183,12 +183,12 @@ jQuery(function(){
                         <div class="adv_point rightt">
                             <div class="ico delivery"></div>
                             <h3 class="title">Бесплатная доставка</h3>
-                            <p class="text">Мы доставим заказаный Вами полис по Киеву совершенно бесплатно</p>
+                            <p class="text">Мы доставим заказанный Вами полис по Киеву совершенно БЕСПЛАТНО</p>
                         </div>
                         <div class="adv_point">
                             <div class="ico kee"></div>
                             <h3 class="title">Личный офис</h3>
-                            <p class="text">Вы сможете просматривать и продлевать свои договора в любой момент в личном офисе на сайте</p>
+                            <p class="text">В дальнейшем Вы сможете просматривать и продлевать свои договора в любой момент, в личном офисе на сайте</p>
                         </div>
                         <div style="clear: both;"></div>
                     </div>
@@ -221,12 +221,12 @@ jQuery(function(){
                     <div class="question_point phone">
                         <div class="ico"></div>
                         <div class="title"><span>(067)</span> 426 4411</div>
-                        <div class="text">Перезвоните нам и мы постараемся вам помоч</div>
+                        <div class="text">Перезвоните нам и мы постараемся Вам помочь</div>
                     </div>
                     <div class="question_point call">
                         <div class="ico call_link"></div>
                         <div class="title call_link">Закажите звонок</div>
-                        <div class="text">Наш менеджер свяжется с вами в удобное для вас время</div>
+                        <div class="text">Наш менеджер свяжется с Вами в удобное для Вас время</div>
                     </div>
                     <div class="question_point ask">
                         <div class="ico question_link"></div>
