--- a/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
@@ -8,11 +8,10 @@
 	                    </div> 
 					<div class="contact_left">
 					<div class="call_center">
-					<h3>Call-центр:</h3>
 					<p><span class="ico"></span> (067) 426-44-11 (Без выходных)</p>
 					</div>
 					<div class="office">
-					<h3>Офис:</h3>
+					<h3>Адрес:</h3>
 					<p>Киев, просп. Владимира Маяковского, 26, оф. 3</p>
 					<p>
 					<b>График работы:</b><br />
