--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -117,21 +117,21 @@ jQuery(function(){
 
                     <!-- econom -->
                     <div class="econom_box">
-                        <div class="text">Мы помогли сэкономить нашим клиентам в 2013 году:</div>
+                        <div class="text">Мы помогли сэкономить нашим клиентам за 2013 год:</div>
                         <span><!--{{savedSum[:1]}}-->1</span>
                         <span><!--{{savedSum[1:1]}}-->8</span>
                         <span><!--{{savedSum[2:1]}}-->2</span>
                         <span class="delim"></span>
-                        <span><!--{{savedSum[3:1]}}-->8</span>
+                        <span><!--{{savedSum[3:1]}}-->7</span>
                         <span><!--{{savedSum[4:1]}}-->4</span>
-                        <span><!--{{savedSum[5:1]}}-->8</span>
+                        <span><!--{{savedSum[5:1]}}-->7</span>
                         <div class="text">грн.</div>
                         <div style="clear: both;"></div>
                         <div class="shadow"></div>
                     </div>
                     <!-- how it work -->
                     <div class="how_it_work">
-                        <h2>Как это работает</h2>
+                        <h2>Как это работает?</h2>
                         <div class="step_point">
                             <div class="img first"></div>
                             <h3 class="text">Укажите страхуемый автомобиль</h2>
