--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -80,7 +80,7 @@
 				    <span class="callnow">Звоните сейчас</span>
                     <span class="phone_ico"></span>
                     <div class="phone_number"><span class="code">067</span>426 4411 <!-- <span class="hours24">24/7</span>--></div>
-                    <div class="grey_button call_me call_link"><!-- <span></span>-->заказать звонок</div>
+                    <div class="grey_button call_me call_link"><!-- <span></span>-->Позвоните мне</div>
                     <!-- <div class="grey_button write_in_skype"><span></span>Написать в Skype</div>-->
                     <div style="clear: both;"></div>
                 </div>
