--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -114,7 +114,7 @@ $(function() {
                             <div class="sub_text">Итого:</div>
                             <div class="white_box itog">грн.</div>
                             <!-- buttons -->
-                            <div class="form_now">Оформить online</div>
+                            <div class="form_now" onclick="yaCounter23668129.reachGoal('click'); return true;">Оформить online</div>
                             <div class="sub_text center">или</div>
                             <div class="orange_button call_link">Консультация с менеджером</div>
                             <div class="orange_button save-calculation">Сохранить расчет</div>
