--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/orderAdminNotification.html.twig
@@ -24,9 +24,9 @@
 <p>Полис (ОСАГО) - {{order.price|number_format(2, ',', ' ')}} грн</p>
 {% if order.priceDgo > 0 %}<p>Расширение ответственности (ДГО) - {{order.priceDgo|number_format(2, ',', ' ')}} грн</p>{% endif %}
 {% if order.priceNs > 0 %}<p>Здоровье водителя и пассажиров (НС) - {{order.priceNs|number_format(2, ',', ' ')}} грн</p>{% endif %}
-<p><b>Общая сумма Вашего заказа:</b> {{(order.price + order.priceDgo + order.priceNs)|number_format(2, ',', ' ')}} грн</p>
+<p><b>Общая сумма заказа:</b> {{(order.price + order.priceDgo + order.priceNs)|number_format(2, ',', ' ')}} грн</p>
 <p>&nbsp;</p>
-<b>Cпособ оплаты:</b>{%- if order.payType == 'cash' -%} Наличными курьеру
+<b>Cпособ оплаты:</b> {%- if order.payType == 'cash' -%} Наличными курьеру
 {%- elseif order.payType == 'plastic' -%} Пластиковая карта
 {%- elseif order.payType == 'privat_card' -%} Карта Приват Банка
 {%- elseif order.payType == 'privat24' -%} Приват24
